2010-08-01  Per Bothner  <per@bothner.com>

	Fixes race condition reported by Daniele Benegiamo.
	* Compilation.java (current): Change from ThreadLocation to
	InheritableThreadLocal.  Using ThreadLocation would be ok, but
	only if we used the proper fluid protocol for thread-local setting.
	The problem is that ThreadLocation by default shares with parent.
	There doesn't seem to be much use for that.
	* Language.java (current): Likewise.
	(global): New static, to provide a default for getDefaultLanguage.

2010-07-31  Per Bothner  <per@bothner.com>

	* Language.java (declFromField): Set IS_DYNAMIC if field
	type is ThreadLocation.

2010-07-05  Per Bothner  <per@bothner.com>

	* LitTable.java (emit): For backward compatibility for we prefer
	Symbol's 'make' method over 'valueOf' - they differ in argument order.

2010-06-29  Per Bothner  <per@bothner.com>

	* ModuleInfo.java (checkCurrent): Make sure to set lastModifiedTime
	even if there is no class yet.

2010-05-19  Per Bothner  <per@bothner.com>

	* Keyword.java (keywordNamespace): Namespace constructors are
	now protected; use factory method instead.

2010-05-07  Per Bothner  <per@bothner.com>

	Avoid writing imported "source" class if current.  I.e. if required
	using a source file name, we parse it to check for dependencies.
	* Compilation.java (explicit): New boolean.
	(process): Don't compile and write class if class is current.
	* Language.java (PARSE_EXPLICIT): New flag.
	(parse): Set Compilation#explicit if PARSE_EXPLICIT set.
	* ModuleInfo.java (checkCurrent): Don't quickly return true if comp is
	non-null (callers should check comp instead to guard against cycles).
	However, do quickly return false if classname is null.

2010-05-06  Per Bothner  <per@bothner.com>

	Fix issue where required modules inherit --aplet and --servlet options.
	* Compilation.java (generateAppletDefault, generateServletDefault):
	Remove static fields.
	* Language.java (PARSE_FOR_APPLET, PARSE_FOR_SERVLET): New flags.